<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.mail">

    <ImageView
        android:layout_width="112dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/icno" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/any_quetion_ask_us"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textColor="#000"/>
                <EditText
                    android:backgroundTint="@color/background"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/emailaddress"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/subject"
                    android:cursorVisible="false"
                    android:background="@drawable/edittextstyle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/email"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"/>
                <EditText
                    android:backgroundTint="@color/background"
                    android:focusable="true"
                    android:id="@+id/subject"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/body"
                    android:singleLine="true"
                    android:background="@drawable/edittextstyle"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/subject"
                    android:inputType="textEmailSubject"
                    android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/body"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittextstyle"
                    android:backgroundTint="@color/background"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="start"
                    android:hint="@string/message"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />
                <Button
                    android:id="@+id/btnsend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:background="@drawable/buttonstyle"
                    android:drawablePadding="10dp"
                    android:drawableEnd="@drawable/ic_send_black_24dp"
                    android:text="@string/send"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </LinearLayout>


        </ScrollView>
    </android.support.v7.widget.CardView>

</LinearLayout>