<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="554dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:onClick="check"
            android:src="@drawable/baseline_help_outline_black_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/ss" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:fontFamily="@font/abeezee"
            android:paddingLeft="35dp"
            android:paddingTop="20dp"
            android:paddingRight="35dp"
            android:text="@string/teks"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:gravity="center"

            android:orientation="horizontal">

            <Button
                android:id="@+id/info"
                android:layout_width="140dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="60dp"
                android:background="@drawable/buttonstyle2"
                android:clickable="true"
                android:drawableStart="@drawable/ic_info_outline_black_24dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/audiowide"
                android:text="@string/Learn"
                android:textAlignment="center"
                android:textColor="#000"
                android:textColorHighlight="#000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/flw"
                android:layout_width="140dp"
                android:layout_height="wrap_content"

                android:background="@drawable/buttonstyle2"
                android:clickable="true"
                android:drawableStart="@drawable/ic_person_add_black_24dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/audiowide"
                android:text="@string/Follow"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bthome"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/buttonstyle"
            android:drawableStart="@drawable/ic_local_movies_black_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/popmov"
            android:textSize="10sp"
            android:focusable="true"
            android:textStyle="bold" />

        <Button
            android:id="@+id/maps"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:drawableStart="@drawable/ic_map_black_24dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/audiowide"
            android:text="@string/movie"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="bottom">

        <com.google.android.gms.ads.AdView

            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">

        </com.google.android.gms.ads.AdView>


    </RelativeLayout>

</LinearLayout>